[gd_scene load_steps=7 format=3 uid="uid://coxp4akgp43gp"]

[ext_resource type="Script" path="res://scripts/menus/pauseMenu.gd" id="1_rv7vb"]
[ext_resource type="Theme" uid="uid://dss6di43qaueh" path="res://media/themes/textBoxTheme.tres" id="2_biebt"]
[ext_resource type="PackedScene" uid="uid://e16thel45nxq" path="res://scenes/menus/characterCard.tscn" id="3_mrxwh"]
[ext_resource type="PackedScene" uid="uid://pcy3fvfptfqx" path="res://scenes/menus/characterSelect.tscn" id="4_e2je2"]
[ext_resource type="PackedScene" uid="uid://d221eyn85jllp" path="res://scenes/menus/invetoryItemsAll.tscn" id="5_kepv1"]
[ext_resource type="PackedScene" uid="uid://ce2b2fr1xm175" path="res://scenes/menus/rulesMenu.tscn" id="6_g582p"]

[node name="pauseMenu" type="CanvasLayer"]
script = ExtResource("1_rv7vb")

[node name="Timer" type="Timer" parent="."]

[node name="itemsMarginContainer" type="MarginContainer" parent="."]
offset_right = 60.0
offset_bottom = 16.0

[node name="Panel" type="Panel" parent="itemsMarginContainer"]
layout_mode = 2
theme = ExtResource("2_biebt")

[node name="Label" type="Label" parent="itemsMarginContainer/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 59.0
offset_bottom = 18.0
text = "Items"

[node name="statusMarginContainer" type="MarginContainer" parent="."]
offset_top = 19.0
offset_right = 60.0
offset_bottom = 35.0

[node name="Panel" type="Panel" parent="statusMarginContainer"]
layout_mode = 2
theme = ExtResource("2_biebt")

[node name="Label" type="Label" parent="statusMarginContainer/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 59.0
offset_bottom = 18.0
text = "Status"

[node name="rulesMarginContainer" type="MarginContainer" parent="."]
offset_top = 38.0
offset_right = 60.0
offset_bottom = 54.0

[node name="Panel" type="Panel" parent="rulesMarginContainer"]
layout_mode = 2
theme = ExtResource("2_biebt")

[node name="Label" type="Label" parent="rulesMarginContainer/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 59.0
offset_bottom = 18.0
text = "Rules"

[node name="characterCard" parent="." instance=ExtResource("3_mrxwh")]
offset_left = 78.0
offset_top = 7.0
offset_right = 287.0
offset_bottom = 114.0

[node name="characterSelect" parent="." instance=ExtResource("4_e2je2")]

[node name="invetoryItemsAll" parent="." instance=ExtResource("5_kepv1")]

[node name="rulesMenu" parent="." instance=ExtResource("6_g582p")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
